--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,6 +14,7 @@ on:
     branches: [ master ]
 jobs:
   build:
+    name: Violet Rails Build (Ruby - ${{ matrix.ruby_version }}, Node.js - ${{ matrix.node_version }})
     runs-on: ubuntu-latest
     services:
       db:
@@ -46,13 +47,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set Environment Variables
       run: cat ci_env.cfg >> $GITHUB_ENV
-    - name: Violet Rails Build (Ruby ${{ matrix.ruby_version }})
+    - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby_version }} # Not needed with a .ruby-version file (2.6.6) but it's good to be clear here
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - uses: actions/setup-node@v2
-      name: Violet Rails Build (Node.js ${{ matrix.node_version }})
       with:
         node-version: ${{ matrix.node_version }}
     - name: Fetch schema file before running migration
