--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,6 +16,8 @@ jobs:
   build:
     name: Violet Rails Build (Ruby - ${{ matrix.ruby_version }}, Node.js - ${{ matrix.node_version }})
     runs-on: ubuntu-latest
+    env:
+      RUBY_BUILD: ${{ matrix.ruby_version }}
     services:
       db:
         image: postgres:12.3-alpine
@@ -47,13 +49,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set Environment Variables
       run: cat ci_env.cfg >> $GITHUB_ENV
+    - name: Checking RUBY_BUILD
+      run: echo "$RUBY_BUILD"
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby_version }} # Not needed with a .ruby-version file (2.6.6) but it's good to be clear here
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      env:
-        RUBY_BUILD: ${{ matrix.ruby_version }}
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node_version }}
