--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Setup main DB
       run: |
         bin/rails db:create
-        bin/rails db:migrate
+        bin/rails db:migrate --trace
     - name: Comparing schema.rb to db/migrations
       run: |
         if ! diff -q tmpfile ./db/schema.rb &>/dev/null; then
