--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RUBY_BUILD: ${{ matrix.ruby_version }}
+      DISABLE_DATABASE_ENVIRONMENT_CHECK: true
     services:
       db:
         image: postgres:12.3-alpine
