feat(): checking rails version in build process

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -65,7 +65,7 @@ jobs:
         tmpfile=$(mktemp)
         cp ./db/schema.rb tmpfile
     - name: Check rails version
-      run: rails -v
+      run: bin/rails -v
     - name: Setup main DB
       run: |
         bin/rails db:create --trace
