--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -96,6 +96,6 @@ jobs:
           host: ${{ secrets.DOKKU_HOST }}
           key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
           username: ubuntu
-          script: dokku postgres:exists review-${{ github.event.pull_request.number }}-db && dokku postgres:destroy review-${{ github.event.pull_request.number }}-db -f
+          script: dokku postgres:exists review-${{ github.event.pull_request.number }}-db && dokku postgres:destroy review-${{ github.event.pull_request.number }}-db --force
 
 
